# lints

./: .gitignore  Cargo.toml  QWASR_RULES_REFERENCE.md  README.md  rules.md
.old/: .env.example  README.md
.old/src/: backend.rs  capabilities.rs  diagnostics.rs  llm.rs
.old/src/handlers/: code_action.rs  completion.rs  hover.rs  mod.rs
.old/src/qwasr/: constraints.rs  traits.rs
.old/vscode-extension/: qwasr-lsp-0.1.0.vsix
examples/: semantic_tests.rs
src/: config.rs  constraints.rs  diagnostics.rs  lib.rs  main.rs  output.rs  rules.rs  semantic.rs
src/handlers/: code_action.rs  document_symbol.rs
src/qwasr/: mod.rs  patterns.rs  rules.rs
