[package]
name = "qwasr-lsp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A QWASR-aware Language Server Protocol implementation for Rust"
authors = ["Matthew Kurian"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/qwasr-lsp"
keywords = ["lsp", "language-server", "qwasr", "wasm", "rust"]
categories = ["development-tools", "text-editors"]

[dependencies]
# LSP protocol and server infrastructure
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Rust parsing and analysis
syn = { version = "2", features = ["full", "parsing", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching and async utilities
notify = "8"
dashmap = "6"
futures = "0.3"

# Regex for pattern matching
regex = "1"

# Path utilities
walkdir = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[lib]
name = "qwasr_lsp"
path = "src/lib.rs"

[[bin]]
name = "qwasr-lsp"
path = "src/main.rs"

[[bin]]
name = "lint-test"
path = "src/bin/lint_test.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
